test_scores/negative_dimers/features/P62316.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P62316.pkl.xz